# nexus

./: .clangd  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
app/: CMakeLists.txt  main.c
bsp/tms570lc43/: CMakeLists.txt  TMS570LC43xx.ccxml
bsp/tms570lc43/halcogen/: CMakeLists.txt  tms570lc_hal.dil
bsp/tms570lc43/halcogen/include/: HL_sci.h
bsp/tms570lc43/halcogen/source/: HL_notification.c  HL_sci.c  HL_sys_main.c
cmake/: tms570lc4357-ti.cmake  toolchain-ti-cgt-arm.cmake
docker/: Dockerfile  README.md
hal/: CMakeLists.txt
hal/include/: hal_gpio.h  hal_uart.h
hal/tms570/: hal_gpio_tms570.c  hal_uart_tms570.c
halcogen/: CMakeLists.txt  tms570lc4357-hal.dil  tms570lc4357-hal.hcg  tms570lc_hal.dil  tms570lc_hal.hcg
tools/: fix_compile_commands.py
