# =============================================================================
# Board Support Package for TMS570LC4357
# =============================================================================

# HALCoGen generated peripheral drivers
add_subdirectory(halcogen)

# BSP-specific initialization and platform code would go here
# For now, everything is in halcogen subdirectory
